# package_instructor_app

./: ARCHITECTURE.md  CLAUDE.md  MANIFEST.in  PRODUCT_GUIDE.md  README.md  setup.cfg  setup.py
instructor_app/: apps.py  email.py  readme.md  utils.py
instructor_app/forms/: __init__.py  course_requirements.py  teacher_applicant.py
instructor_app/management/commands/: notify_incomplete_si_app.py  notify_si_pending_review.py
instructor_app/migrations/: 0001_initial.py  0002_rename_fc_review_status.py  0003_alter_applicantcoursereviewer_reviewer_and_more.py
instructor_app/models/: __init__.py  applicant_course_reviewer.py  applicant_recommendation.py  applicant_school_course.py  application_upload.py  teacher_applicant.py  teacher_applicant_model.py  teacher_application.py
instructor_app/reports/: course_reviewers.py  pending_notifications.py  pending_review_notifications.py  teacher_applications.py
instructor_app/serializers/: course_administrator.py  course_requirement.py  teacher_application.py
instructor_app/services/: import_teacher.py  incomplete_notifications.py  pdf.py  pending_review_notifications.py
instructor_app/settings/: incomplete_si_application.py  inst_app_language.py  teacher_application_email.py
instructor_app/signals/: teacher_applications.py
instructor_app/templatetags/: instructor_app_tags.py
instructor_app/urls/: applicant.py  cis.py  faculty.py  highschool_admin.py  instructor.py
instructor_app/views/: home.py  manage_courses.py  manage_ed_bg.py  manage_recommendation.py  onboarding.py
instructor_app/views/ce/: actions.py  (+8 more)
(+37 files in other folders)
