[metadata]
name = instructor-app
version = 1.0.0
description = Django app for instructor application management in MyCE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Canusia/package_instructor_app
author = Avi Kadaji
author_email = avi@canusia.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Framework :: Django :: 5.1
    Framework :: Django :: 5.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    Django>=3.2

[options.packages.find]
exclude =
    tests*
